# my_thesis_phd_candidate_26

./: .env.example  .gitignore  .mcp.json  AUTHORS.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_PLAN_FULL_PORTFOLIO_REVIEW.md  PAPER_LINKAGE_MAP.md  PHASE_A_FINAL_REPORT.md  PHASE_B_STATUS_REPORT.md  PHASE_C_STATUS_REPORT.md  PORTFOLIO_STRATEGY_DECISION_LOG.md  README.md  REPLICATION_STATUS.md  REPRODUCIBILITY.md  SUBMISSION_READINESS_SNAPSHOT.md  build_ctu_docx.sh  pipeline_status.md
.claude/: ecc-tools.json  identity.json  session-reads.txt  settings.json
.codex/: AGENTS.md
.github/: PR_REVIEW_CHECKLIST.md
.plans/: active_plan.md  adversarial_review_plan.md  cd1_cd2_restructure_outline.md  cd1_cd2_review_report.md  reframe_plan.md  sample_review_p6_manuscript.md
SUBMISSION_PACKAGE/: README.md
TAI_LIEU_HOAN_CHINH/: README.md
chuong_trinh_dao_tao/: NCS_huong_dan_viet_chuyen_de_TLTQ.docx  NCS_tom_tat_qua_trinh_thuc_hien_TLTQ.docx  bien_ban_hop_tieu_ban_cham_chuyen_de_TLTQ.docx
chuyen_de/: 20_cd1_cd2_review_report_vi.md
data_wbes/: wbes_asia_country_scope.md
docs/: BAO_CAO_TIEN_DO_GVHD_2026-06.docx  BAO_CAO_TIEN_DO_GVHD_2026-06.md  CTU_FORMATTING_GUIDE.md  EXTERNAL_TOOLS_REFERENCE.md  STATA_TRONG_CLAUDE_CODE.md
jed_ai_digital/: jed_digital_divide_manuscript.docx  jed_digital_divide_manuscript.md
latex/: README.md
manuscripts/: Chuyen_de_1_CTU_Do_Thuy_Huong.docx  DEPRECATED.md  bao_cao_chuyen_de_1_CTU.docx  p3_vietnam_cover_letter.docx  p3_vietnam_cover_letter.md  p3_vietnam_en_clean.md  p3_vietnam_final.docx  p3_vietnam_title_page.docx  p3_vietnam_title_page.md  p3_vietnam_vi_clean.md  p4_singapore_cover_letter.docx  p4_singapore_cover_letter.md  p4_singapore_en_clean.md  p4_singapore_final.docx  p4_singapore_title_page.docx  p4_singapore_title_page.md  p4_singapore_vi_clean.md  p5_china_cover_letter.docx  p5_china_en_clean.md  p5_china_final.docx  p5_china_vi_clean.md  p7_capstone_en_clean.md  p7_capstone_vi_clean.md  p8_pacific_sids_en_clean.md  p8_pacific_sids_vi_clean.md  test_1070.txt  test_size.txt  wb_country_classification_2025_2026.md  wbes_asia_country_scope.md
osf/: OSF_PROJECT_STRUCTURE.md
p1/: p1_vefr_firm_performance_heterogeneity.docx
p10_japan/: p10_japan_vi.docx  p10_japan_vi.md
p3/: RECONCILIATION_NOTES.md  online_appendix.md  p3_vietnam_en_clean.md
p4/: COEFFICIENT_RECONCILIATION_NOTES.md  RECONCILIATION_NOTES.md  p4_singapore_en_clean.md
p5/: 05_p5_china_design_vi.md  COEFFICIENT_RECONCILIATION_TODO.md  (+2 more)
tools/econ/overleaf-sync-now-master/: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
tools/econ/overleaf-sync-now-master/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
tools/econ/overleaf-sync-now-master/.github/workflows/: ci.yml
tools/econ/overleaf-sync-now-master/docs/: architecture.md  authentication.md  operations.md  troubleshooting.md  workflow.mmd
tools/econ/overleaf-sync-now-master/src/overleaf_sync_now/: SKILL.md  __init__.py  cli.py
tools/econ/overleaf-sync-now-master/tests/: test_resolver.py  test_review_fixes.py
tools/mcp/data360-mcp-dev/: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  DEVELOPMENT.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  WB-IGO-RIDER.md  package-lock.json  package.json  pyproject.toml  run_server.sh  startup.sh
tools/mcp/data360-mcp-dev/.cursor/skills/data360-mcp-ui-packages/: SKILL.md
tools/mcp/data360-mcp-dev/.cursor/skills/data360-mcp-ui-packages/references/: checklist.md
tools/mcp/data360-mcp-dev/.github/workflows/: pages.yml  python-publish.yml
tools/mcp/data360-mcp-dev/TODO/: MCP-001-system-prompt-sync.md  MCP-002-vega-line-tooltips.md  MCP-003-beeswarm-multi-country.md  MCP-004-viz-empty-data-guard.md  MCP-005-cache-configurable-ttl.md  README.md  tasks.json
tools/mcp/data360-mcp-dev/components/: README.md
tools/mcp/data360-mcp-dev/docs/: architecture-data360-mcp.md  index.html  overview.md  payload_analysis.md
tools/mcp/data360-mcp-dev/docs/assets/css/: main.css
tools/mcp/data360-mcp-dev/docs/assets/js/: docs.js
tools/mcp/data360-mcp-dev/examples/: demo_query_example.md
tools/mcp/data360-mcp-dev/examples/agents/langchain-graph/: README.md  gated_parent_graph_demo.py  parent_graph_demo.py  stream_events_demo.py
tools/mcp/data360-mcp-dev/examples/agents/langchain-graph/demo_web/: README.md  __init__.py  server.py
tools/mcp/data360-mcp-dev/examples/agents/langchain-graph/demo_web/static/: index.html
tools/mcp/data360-mcp-dev/examples/agents/langchain-minimal/: README.md  run_once.py
tools/mcp/data360-mcp-dev/scripts/: build_ref_area_groups.py  generate_licenses.py  llm_mcp_demo.py  sync_github_issues.py  test_compact_output.py  test_rate_limits.py
tools/mcp/data360-mcp-dev/src/data360/: __init__.py  api.py  config.py  databases.json  errors.py  health.py  http_client.py  models.py  otel_setup.py  providers.py  ref_area_groups.json  server.py  tool_contract.py  visualization.py  viz_config.py
tools/mcp/data360-mcp-dev/src/data360/mcp_server/: __init__.py  __main__.py  _server_definition.py  agent_recipe.py  prompts.py  resources.py  security_validator.py  tool_spans.py  tools.py
tools/mcp/data360-mcp-dev/tests/: conftest.py  test_aggregation_tools.py  test_api.py  test_choropleth.py  test_code_review_fixes.py  test_codelist_resolution.py  test_database_resolution.py  test_errors.py  test_group_hierarchy.py  test_health.py  test_mcp_resources_and_prompts.py  test_multi_query_search.py  test_prefiltering.py  test_primary_redirect.py  test_prompt_injection.py  test_security_validator.py  test_temporal_frequency.py  test_tool_contract_sync.py  test_unit_measure_dimension.py  test_visualization.py  test_viz_comp_breakdown.py  test_viz_complex.py  test_viz_grammar_contract.py  test_viz_resolution_integration.py  test_viz_scale_detection.py  test_viz_year_axis.py
tools/mcp/world_bank_mcp_server-master/: Dockerfile  README.md  pyproject.toml  requirements.txt  smithery.yaml
tools/mcp/world_bank_mcp_server-master/src/world_bank_mcp_server/: server.py
(+2729 files in other folders)
