[build-system]
# 68+ supports the table-form `license = { text = "MIT" }`. We avoid the
# newer SPDX `license = "MIT"` (PEP 639) form because it requires
# setuptools >= 77, which has no Python 3.8 release on PyPI - and we want
# to keep 3.8 in the support matrix.
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "overleaf-sync-now"
# Version is single-sourced from src/overleaf_sync_now/__init__.py::__version__
# (see [tool.setuptools.dynamic] below) so it can never drift from the runtime
# `--version` string. Bump __version__ there on release.
dynamic = ["version"]
description = "Stops Claude Code and Codex CLI from silently overwriting Overleaf web edits with a stale local Dropbox copy. PreToolUse hook + CLI + agent skill that probes Overleaf's version history and refreshes local .tex/.bib files before every AI Read/Edit."
readme = "README.md"
# Old-form license metadata. Don't switch to PEP 639 SPDX (`license = "MIT"`
# + `license-files = [...]`) without first dropping Python 3.8 support — see
# the [build-system] note above.
license = { text = "MIT" }
authors = [{ name = "Lu Han", email = "hanlulong@gmail.com" }]
maintainers = [{ name = "OpenEcon.ai" }]
requires-python = ">=3.8"
keywords = [
    # skill-discovery keywords (high-intent search terms in agent ecosystems)
    "overleaf-skill", "claude-skill", "claude-code-skill", "codex-skill",
    "agent-skill", "ai-skill",
    # platform / brand
    "claude-code", "codex", "anthropic", "openai", "mcp",
    # category
    "ai-tools", "ai-agent", "cli",
    # domain
    "overleaf", "latex", "latex-editor", "dropbox", "sync",
    # audience
    "academic-writing", "paper-writing", "scientific-writing",
    "automation", "productivity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28",
    "browser-cookie3>=0.19",
    # Optional on Linux (uncommon install needs) and on 3.13+ (current rookiepy
    # build still pins PyO3 <= 3.12 transitively). The auth chain degrades
    # gracefully when rookiepy is absent.
    "rookiepy>=0.5; python_version < '3.13' and platform_system != 'Linux'",
    # Bundled (small, ~10MB) so `overleaf-sync-now login` works in uv-managed
    # tool venvs (which ship without pip and so can't lazy-install). The big
    # ~150MB Chromium download is still on-demand at first `login`. playwright
    # dropped Python 3.8 at 1.49.0, so pin a 3.8-compatible range there and
    # let 3.9+ take a current build — keeping the marker-per-dep convention the
    # rest of this table uses, rather than leaving 3.8 resolution to backtracking.
    "playwright>=1.40,<1.49; python_version < '3.9'",
    "playwright>=1.49; python_version >= '3.9'",
    # patchright is a maintained Playwright fork that patches the CDP
    # Runtime.Enable leak and command-flag fingerprints that Google's
    # `disallowed_useragent` gate detects. Same `sync_playwright` API, so the
    # adapter in cli.py just prefers it when present. Vanilla playwright stays
    # as a fallback. Conditional on Python >= 3.9 — patchright's wheel does
    # not support 3.8, but the auth chain degrades gracefully to playwright
    # for that minority install base.
    "patchright>=1.40; python_version >= '3.9'",
]

[project.urls]
Homepage = "https://github.com/hanlulong/overleaf-sync-now"
Repository = "https://github.com/hanlulong/overleaf-sync-now"
Issues = "https://github.com/hanlulong/overleaf-sync-now/issues"
Author = "https://luhan.io/"
Publisher = "https://openecon.ai/"

[project.scripts]
overleaf-sync-now = "overleaf_sync_now.cli:main"

[tool.setuptools.dynamic]
version = { attr = "overleaf_sync_now.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
overleaf_sync_now = ["SKILL.md"]
