
[project]
name = "data360-mcp"
version = "0.1.2"
description = "Model Context Protocol (MCP) server that gives LLM agents and chatbots direct access to the World Bank's Data360 Platform. Search, validate, and retrieve development indicators—from GDP and poverty to gender equality and climate—with structured metadata and time-series data, without hallucinating values."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.12.4",
  "mcp>=1.18.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "typer>=0.20.1",
  "gunicorn>=23.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "draco @ git+https://github.com/avsolatorio/draco2.git@data360-mcp",
  "opencensus-ext-azure>=1.1.13",
  "azure-monitor-opentelemetry>=1.6.0",
  "pandas>=3.0.0",
  "cachetools>=6.2.4",
  "scikit-learn>=1.8.0",
  "opentelemetry-instrumentation-httpx>=0.50b0",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-exporter-otlp>=1.28.0",
]

[project.optional-dependencies]
# LangChain / LangGraph client (workspace package); use: uv sync --extra agent
agent = ["data360-mcp-agent"]

[build-system]
requires = ["setuptools>=42", 'setuptools-scm']
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
data360 = ["tool_contract_version.json", "databases.json", "ref_area_groups.json"]

[tool.uv.workspace]
members = ["packages/data360-mcp-agent"]

[dependency-groups]
dev = [
  "data360-mcp-agent",
  "pre-commit>=4.5.0",
  "pyright>=1.1.407",
  "ruff>=0.14.8",
  "poethepoet>=0.27.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-httpx>=0.27.0",
  "pytest-cov>=4.1.0",
  "pip-licenses>=5.0.0",
  "pip-audit>=2.10.0",
  "requests>=2.32.0",
]

[tool.ruff.lint]
select = ['I', 'UP', 'PL', 'F401']

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
data360-mcp-agent = { workspace = true }

[tool.pyright]
typeCheckingMode = "standard"
extraPaths = ["packages/data360-mcp-agent/src"]

[tool.poe.tasks.serve]
help = "Run the Data360 MCP server"
cmd = "uv run fastmcp run src/data360/server.py --transport ${transport} --port ${port}"
args = [
   {name = "transport", options = ["--transport", "-t"], default = "streamable-http"},
   {name = "port", options = ["--port", "-p"], default = "8021"},
]

[tool.poe.tasks.test]
help = "Run tests"
cmd = "pytest"

[tool.poe.tasks.test-cov]
help = "Run tests with coverage"
cmd = "pytest --cov=src/data360 --cov-report=term-missing"

[tool.poe.tasks.licenses]
help = "Regenerate THIRD_PARTY_LICENSES.md"
cmd = "python scripts/generate_licenses.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
